--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/item_friend"
+    tools:listitem="@layout/item_friend_child"
     tools:context=".FriendFragment">
 
 </android.support.v7.widget.RecyclerView>
