(feat-friend) style: Change Default Friend Profile Image

--- a/app/src/main/res/layout/item_friend_child.xml
+++ b/app/src/main/res/layout/item_friend_child.xml
@@ -17,8 +17,10 @@
         android:adjustViewBounds="true"
         android:background="@drawable/round"
         android:contentDescription="@string/dummy_string"
-        android:scaleType="fitXY"
-        android:src="@drawable/img_dummy_profile"
+        android:scaleType="center"
+        android:src="@drawable/ic_menu_friend"
+        android:tint="@color/colorProfile"
+        android:backgroundTint="@color/colorProfileBackground"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_name"
