(feat-friend) feat & style: Add My Profile Image code

--- a/app/src/main/res/layout/item_friend_child.xml
+++ b/app/src/main/res/layout/item_friend_child.xml
@@ -18,9 +18,7 @@
         android:background="@drawable/round"
         android:contentDescription="@string/dummy_string"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_menu_friend"
-        android:tint="@color/colorProfile"
-        android:backgroundTint="@color/colorProfileBackground"
+        android:src="@drawable/img_default_profile"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_name"
