--- a/app/src/main/res/layout/item_friend_header.xml
+++ b/app/src/main/res/layout/item_friend_header.xml
@@ -23,11 +23,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:textSize="12sp"
         android:text="@string/dummy_string"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerLine" />
+        app:layout_constraintTop_toBottomOf="@+id/headerLine"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ToggleButton
         android:id="@+id/button_expand"
