(feat-friend) feat: Add Friend Detail Activity Layout and Code

--- a/app/src/main/res/layout/item_friend_child.xml
+++ b/app/src/main/res/layout/item_friend_child.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/round"
+        android:background="@drawable/shape_circle"
         android:contentDescription="@string/dummy_string"
         android:scaleType="fitXY"
         android:src="@drawable/img_default_profile"
@@ -52,7 +52,7 @@
         android:layout_margin="8dp"
         android:paddingTop="10dp"
         android:background="@drawable/your_bubble"
-        android:backgroundTint="#efefef"
+        android:backgroundTint="@color/colorLightGray"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
