--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F3035</color>
     <color name="colorPrimaryDark">#3F3035</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#fce600</color>
 
+    <color name="colorLightGray">#efefef</color>
     <color name="colorProfileBackground">#53c6b5</color>
     <color name="colorProfile">#9edcd7</color>
 </resources>
