(feat-chat) feat: Add ChatRoom Activity and MessageRecyclerAdapter

--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -9,4 +9,9 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="ChatRoomTheme" parent="Theme.AppCompat.Light">
+        <item name="android:statusBarColor">@color/colorChatRoomStatus</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
 </resources>
