feat: Add Splash and SignUp Activity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,9 @@
         <item name="colorControlActivated">@color/colorAccent</item>
         <item name="colorControlHighlight">@color/colorAccent</item>
 
+        <item name="android:windowAnimationStyle">@null</item>
+
+
     </style>
 
 
