--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -33,6 +33,8 @@
         <item name="colorControlNormal">@color/colorPrimary</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
         <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="android:windowAnimationStyle">@null</item>
+
     </style>
 
     <style name="FirebaseUI.AuthMethodPicker.ButtonHolder">
