style: Change style for Toolbar

--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -10,6 +10,10 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">26sp</item>
+    </style>
+
     <style name="ChatRoomTheme" parent="Theme.AppCompat.Light">
         <item name="android:statusBarColor">@color/colorChatRoomStatus</item>
         <item name="android:windowLightStatusBar">true</item>
