--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:elevation="0dp"
         android:background="?android:attr/windowBackground"
         android:minHeight="?attr/actionBarSize"
-        android:titleTextAppearance="@style/Toolbar.TitleText"
+        app:titleTextAppearance="@style/Toolbar.TitleText"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
