--- a/app/src/main/res/layout/activity_friend_search.xml
+++ b/app/src/main/res/layout/activity_friend_search.xml
@@ -35,6 +35,8 @@
         android:layout_marginBottom="16dp"
         android:padding="8dp"
         android:paddingStart="16dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintTop_toBottomOf="@+id/label_friend_email"
         android:background="?android:attr/windowBackground"
         android:inputType="textEmailAddress"
@@ -108,16 +110,25 @@
             android:text="@string/dummy_string"
             android:textSize="18sp"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"/>
         <Button
             android:id="@+id/button_friend_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:text="@string/label_button_friend_add"
             android:backgroundTint="@color/colorAccent"/>
+        <TextView
+            android:id="@+id/text_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:text="@string/message_cant_add_friend_info"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
