--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorLightGray">#efefef</color>
     <color name="colorProfileBackground">#53c6b5</color>
     <color name="colorProfile">#9edcd7</color>
+    <color name="colorWarring">#ff0000</color>
 </resources>
