refactor: Package 구조 변경

--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/parent"
     android:background="@color/colorChatRoomBackground"
-    tools:context=".ChatRoomActivity">
+    tools:context=".view.chat.ChatRoomActivity">
 
 
     <android.support.v7.widget.RecyclerView
