--- a/app/src/main/res/layout/activity_friend_detail.xml
+++ b/app/src/main/res/layout/activity_friend_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/profileLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FriendDetailActivity">
+    tools:context=".view.friend.detail.FriendDetailActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline1"
